# bazel-angular-grpc

./: README.md  WORKSPACE  angular.json  angular.json.bak  package-lock.json  package.json  tsconfig.json
proto/v1/: BUILD.bazel  hello.proto
src/: BUILD.bazel
src/app/: app.component.spec.ts  app.component.ts
